--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <meta name="google" content="notranslate">
 </head>
 <body>
-    <section id="loading-page" class="elementShow">
+    <section id="loading-page" class="elementHide">
         <lottie-player src="https://res.cloudinary.com/dt3ct7mak/raw/upload/v1631161818/vp46cfr6uk9utqikbduh.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
     </section>
 
     <div id="banner">
-        <img id="banner-logo" src="img/WireWorld.png" alt="Instituto Politécnico Modelo">
+        <lottie-player src="anim/26904-world.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
     </div>
     <section id="formContainer">
         <label for="name">Nombre</label>
