--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </section>
 
     <div id="banner">
-        <lottie-player src="anim/26904-world.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+        <a id="banner-ipm-logo">Instituto Politécnico Modelo</a>
+        <img id="ipm-logo"src="img/IPM.png" alt/>
+        <lottie-player src="https://res.cloudinary.com/dt3ct7mak/raw/upload/v1631161818/vp46cfr6uk9utqikbduh.json" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop autoplay></lottie-player>
     </div>
     <section id="formContainer">
         <label for="name">Nombre</label>
