New way to show data

--- a/index.html
+++ b/index.html
@@ -33,5 +33,20 @@
         </div>
         <a id="enterbtn"onclick="getId()">Entrar</a>
     </section>
+
+    <script>
+        // Get the input field
+        let input = document.getElementById("surname-1");
+        // Execute a function when the user releases a key on the keyboard
+        input.addEventListener("keyup", function(event) {
+            // Number 13 is the "Enter" key on the keyboard
+            if (event.keyCode === 13) {
+                // Cancel the default action, if needed
+                event.preventDefault();
+                // Trigger the button element with a click
+                document.getElementById("enterbtn").click();
+            }
+        });
+    </script>
 </body>
 </html>
