--- a/trim1.html
+++ b/trim1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
     <link href="tableStyle.css" rel="stylesheet">
+    <link href="loadingAnimations.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -16,10 +17,12 @@
 </head>
 <body id="dataShow" onload="setLoading(true); getTrim1(sessionStorage.getItem('id'))">
 <section id="loading-page" class="elementShow">
-    <lottie-player src="https://res.cloudinary.com/dt3ct7mak/raw/upload/v1631161818/vp46cfr6uk9utqikbduh.json"
-                   background="transparent" speed="1" style="width: 300px; height: 300px;" loop
-                   autoplay></lottie-player>
+    <lottie-player src="https://res.cloudinary.com/dt3ct7mak/raw/upload/v1631161818/vp46cfr6uk9utqikbduh.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
 </section>
+<div id="action-notifier" class="contracted opacity0">
+    <a id="action-ntf-text" class="text-no-visible">Haciendo copia de seguridad</a>
+    <div class="lds-dual-ring"></div>
+</div>
 
 </body>
 </html>
